syntax = "proto3";

package discover;

option go_package = "discoversvr/discover";

service DiscoverService {
  rpc DiscoverServiceWithName (DiscoverServiceWithNameRequest) returns (DiscoverServiceResponse) {}
  rpc DiscoverServiceWithID (DiscoverServiceWithIDRequest) returns (DiscoverServiceResponse) {}
  rpc GetRouteInfoWithName (GetRouteInfoWithNameRequest) returns (RouteInfosResponse) {}
  rpc GetRouteInfoWithPrefix (GetRouteInfoWithPrefixRequest) returns (RouteInfosResponse) {}
  rpc SetRouteRule (RouteInfo) returns (SetRouteRuleResponse) {}
}




message DiscoverServiceWithNameRequest{
  string name = 1;
}

message DiscoverServiceWithIDRequest{
  string instance_id = 1;
}

message DiscoverServiceResponse{
  repeated ServiceInfo services = 1;
  string error_mes = 2;
}

message ServiceInfo{
  string service_name = 1;
  string instance_id = 2;
  string host = 3;
  string port = 4;
  string protocol = 5;
  int64 weight = 6;
  int64 timeout = 7;
  string metadata = 8;
}


message GetRouteInfoWithNameRequest{
  string name = 1;
}

message GetRouteInfoWithPrefixRequest{
  string name = 1;
  string prefix = 2;
}

message RouteInfosResponse{
  repeated RouteInfo routes = 1;
  string error_mes = 2;
}


message RouteInfo{
  string name = 1;
  string host = 2;
  string port = 3;
  string prefix = 4;
  string metadata = 5;
}

message SetRouteRuleResponse{
  string error_mes = 1;
}
